--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,9 @@ edition = "2021"
 [dependencies]
 rocket = {version = "0.5.0", features = ["json"]}
 serde ={version = "1.0.0", features = ["derive"]}
+dotenv = "0.15.0"
+
+[dependencies.mongodb]
+version = "2.8.2"
+default-features = false
+features = ["sync"] 
