--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,1 @@
-MONGO_URI="mongodb+srv://ruffle:<password>@cluster-ruffle.vplqcb5.mongodb.net/"
+URI="mongodb+srv://ruffle:<password>@cluster-ruffle.vplqcb5.mongodb.net/"
