--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -13,6 +13,10 @@ jobs:
   to-do:
     name: learning ci/cd
     runs-on: windows-latest
+
+    steps: 
+    - uses: actions/checkout@v3
+    - name: Create CI/CD
   
   build:
 
