--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -16,7 +16,8 @@ jobs:
 
     steps: 
     - uses: actions/checkout@v3
-    - name: Create CI/CD
+    - working-directory: src/main
+      run: cargo run
   
   build:
 
