--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ edition = "2021"
 rocket = {version = "0.5.0", features = ["secrets","json"]}
 serde ={version = "1.0.0", features = ["derive"]}
 dotenv = "0.15.0"
+argon2 = "0.5.3"
 
 [dependencies.mongodb]
 version = "2.8.2"
